Updated api responses
